fix transcript overflow

--- a/app/assets/stylesheets/directory/base.css.scss
+++ b/app/assets/stylesheets/directory/base.css.scss
@@ -504,8 +504,6 @@ img.media-object {
   }
 
   .file-transcript-text {
-    width: 800px;
-    max-width: 800px;
     height: 22px;
     overflow: hidden;
   }
